# quando

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  justfile  main.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  pypi.yml
quando/: __init__.py
tests/: test_quando.py
