[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quando"
version = "0.1.0"
description = "Flow metrics library for kanban forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]
