[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quando"
version = "0.1.0"
description = "Flow metrics library for kanban forecasting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
