[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quando-forecast"
version = "0.1.0"
description = "Flow metrics library for kanban forecasting"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.2",
]

[tool.hatch.build.targets.wheel]
packages = ["quando"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
